2019-04-26-10:53  gepr  <gepr@tempusdictum.com>

	* TypeString.java, CollectionUtils.java: Change getType() to getTypeString() to allow ISL code to use SoluteType class properly.

2018-02-06-15:46  gepr  <gepr@tempusdictum.com>

	* CollectionUtils.java (countObjectsOfType()): Change to accept List instead of ArrayList.

2018-02-06-15:31  gepr  <gepr@tempusdictum.com>

	* CollectionUtils.java (subFrom(), sub()): New methods to subtract one map from another.
	(main()): Add tests for subtraction.

2018-02-06-15:27  gepr  <gepr@tempusdictum.com>

	* CollectionUtils.java (countType[s]() → countObjects[Of|By]Type()): Rename methods to be more semantically accurate.

2017-02-24-14:51  gepr  <gepr@tempusdictum.com>

	* CollectionUtils.java(deepCopy(), add()): New methods to create a deep copy of a HashMap and add 2 HashMaps into a newly constructed HashMap.

2016-11-02-16:24  gepr  <gepr@tempusdictum.com>

	* ClassUtils, CollectionUtils, ObjectUtils, StringUtils: Reformatted and removed some TBD comments.
	* ClassUtils.java (getResourceFile()): Add a call to URLDecoder before looking for the file.  This should allow things like unicode characters in path names.

2016-09-01-14:32  gepr  <gepr@tempusdictum.com>

	* CollectionUtils.java (addIn()): If key is absent from receiver, insert giver's value (without copy).  If receiver value is double or float, use giver.doubleValue().  Everything else uses giver.longValue().

2016-08-18  gepr  <gepr@tempusdictum.com>

	* preamble.js: Move started variable declaration here to support those scripts that want to use it.

	* ScriptEval.java (ScriptEval): Refactor so that script files are only loaded once, then functions defined inside the scripts can be called later.  This avoids having too many open script files at any given time.

2016-04-15  gepr  <gepr@tempusdictum.com>

	* preamble.js: New script to house the check() function and the declaration of the jsException.
