@@ -3,4 +3,4 @@ do.depend=false
 do.jar=true
 javac.debug=true
 javadoc.preview=true
-user.properties.file=/home/gepr/.netbeans/9.0/build.properties
+user.properties.file=/home/gepr/.netbeans/11.0/build.properties
