@@ -3,8 +3,10 @@
     <editor-bookmarks xmlns="http://www.netbeans.org/ns/editor-bookmarks/2" lastBookmarkId="0"/>
     <open-files xmlns="http://www.netbeans.org/ns/projectui-open-files/2">
         <group>
-            <file>file:/home/gepr/ucsf/bsg/bsg/src/bsg/util/TypeString.java</file>
-            <file>file:/home/gepr/ucsf/bsg/bsg/src/bsg/util/CollectionUtils.java</file>
+            <file>file:/home/gepr/ucsf/bsg/bsg/src/bsg/util/SigmoidGradient.java</file>
+            <file>file:/home/gepr/ucsf/bsg/bsg/src/bsg/util/Gradient.java</file>
+            <file>file:/home/gepr/ucsf/bsg/bsg/src/bsg/util/LinearGradient.java</file>
+            <file>file:/home/gepr/ucsf/bsg/bsg/src/bsg/util/ExpGradient.java</file>
         </group>
     </open-files>
 </project-private>
